--- a/Udemy.AdvertisementApp.Presentation/Views/Shared/_Layout.cshtml
+++ b/Udemy.AdvertisementApp.Presentation/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="/css/styles.css" rel="stylesheet" />
 </head>
 <body id="page-top">
     <!-- Navigation-->
@@ -23,7 +23,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#!">Kayıt Ol</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-action="SignUp" asp-controller="Account">Kayıt Ol</a></li>
                     <li class="nav-item"><a class="nav-link" href="#!">Giriş Yap</a></li>
                     <li class="nav-item"><a class="nav-link" asp-action="HumanResource" asp-controller="Home">İnsan Kaynakları</a></li>
                 </ul>
@@ -40,6 +40,6 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    <script src="/js/scripts.js"></script>
 </body>
 </html>
