--- a/Udemy.AdvertisementApp.Presentation/Views/_ViewImports.cshtml
+++ b/Udemy.AdvertisementApp.Presentation/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
 ﻿@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
 @using Udemy.AdvertisementApp.Dtos
+@using Udemy.AdvertisementApp.Presentation.Models
